# page-analyzer

./: .coverage  Makefile  README.md  build.sh  coverage.xml  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page_analyzer.yml
page_analyzer/: __init__.py  app.py  database_queries.py  db.py  html.py  url.py  work_html.py  work_url.py
page_analyzer/templates/: 500.html  base.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/components/: navbar.html
tests/: test_app.py
